@@ -15,6 +15,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.mars_sim.console.chat.Conversation;
+import com.mars_sim.core.Entity;
 import com.mars_sim.core.equipment.EquipmentType;
 import com.mars_sim.core.malfunction.Malfunction;
 import com.mars_sim.core.malfunction.Malfunction.Repairer;
@@ -70,6 +71,7 @@ public class CommandHelper {
 	public static final String DOUBLE_FORMAT = "%.2f";
 	public static final String KG_FORMAT = "%.2f kg";
 	public static final String KM_FORMAT = "%.2f km";
+	public static final String KW_FORMAT = "%,.2f kW";
 	public static final String KWH_FORMAT = "%.2f kWh";
 	public static final String PERC_FORMAT = "%.0f%%";
 	public static final String PERC1_FORMAT = "%.1f%%";
@@ -77,6 +79,10 @@ public class CommandHelper {
 	public static final String KMPH_FORMAT = "%.2f km/h";
 	public static final String MS_FORMAT = "%.2f m/s";
     public static final String MONEY_FORMAT = "$%,.2f";
+	public static final String DEG_FORMAT = "%.2f\u00B0";
+	public static final String KPA_FORMAT = "%.2f kPa";
+	public static final String CELSIUS_FORMAT = "%.2f C\u00B0";
+
 	private static final String DUE_FORMAT = "%d:%03d";
 
 	
@@ -280,8 +286,7 @@ public class CommandHelper {
 		double trav = 0;
 		Vehicle v = null;
 		
-		if (mission instanceof VehicleMission) {
-			VehicleMission vm = (VehicleMission) mission;
+		if (mission instanceof VehicleMission vm) {
 			v = vm.getVehicle();
 			dist = vm.getDistanceProposed();
 			trav = vm.getTotalDistanceTravelled();
@@ -321,7 +326,7 @@ public class CommandHelper {
 			response.appendLabeledString("Phase", mission.getPhaseDescription());
 			response.appendLabeledString("Phase Started", mission.getPhaseStartTime().getTruncatedDateTimeStamp());
 		
-			List<String> names = plist.stream().map(p -> p.getName()).sorted().collect(Collectors.toList());
+			List<String> names = plist.stream().map(Entity::getName).sorted().toList();
 			response.appendNumberedList("Members", names);
 		
 			// Travel mission has a route
@@ -530,18 +535,18 @@ public class CommandHelper {
 	 * 
 	 * @param response Output destination
 	 * @param processType The name of the process type column
-	 * @param currentMSol The current mars time
 	 * @param bName The hosting Building name
 	 * @param processor Host of the processes
 	 */
-	public static void outputProcesses(StructuredResponse response, String processType, int currentMSol, String bName,
+	public static void outputProcesses(StructuredResponse response, String processType, String bName,
 										ResourceProcessor processor) {
 
 		// Build table label by placing the building name before the process type
 		// Works as PROCESS_WIDTh is very large
 		int width = PROCESS_WIDTH - processType.length();
 		StringBuilder firstColumn = new StringBuilder();
-		firstColumn.append(String.format("%-" + width + "s", bName));
+		String format = "%-" + width + "s"; 
+		firstColumn.append(String.format(format, bName));
 		firstColumn.append(processType);
 
 	    List<ResourceProcess> processes = new ArrayList<>(processor.getProcesses());
